# matching-service

./: Cargo.toml  Dockerfile  config.yaml  sample.json
src/: lib.rs  main.rs
src/scoring_rules/: mod.rs  score_ancestal_home.rs  score_birth_year.rs  score_current_place.rs  score_economic.rs  score_height.rs  score_original_family_composition.rs  score_parents_situation.rs  score_parentts_situation.rs  score_qualification.rs  score_weight.rs  score_work.rs
